--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 
     <!-- DIV VUE -->
     <div id="app">
-        
+        <div id="background" class="vh-100 d-flex align-items-center justify-content-center">
+            <div id="window" class="d-flex bg-light">
+                <div id="chat-list">
+
+                </div>
+                <div id="chat">
+
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- LINK AXIOS -->
