--- a/index.html
+++ b/index.html
@@ -82,8 +82,16 @@
                         </div>
                     </div>
                     <!-- CHAT -->
-                    <div id="chat">
-
+                    <div id="chat" class="d-flex flex-column">
+                        <div class="sent">
+                            <p>Hai portato a spasso il cane?</p>
+                        </div>
+                        <div class="sent">
+                            <p>Ricordati di stendere i panni</p>
+                        </div>
+                        <div class="received">
+                            <p>Tutto fatto!</p>
+                        </div>
                     </div>
                     <!-- INPUT MESSAGGIO -->
                     <div id="input-mex" class="d-flex justify-content-between align-items-center px-3">
