--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <!-- INPUT MESSAGGIO -->
                     <div id="input-mex" class="d-flex justify-content-between align-items-center px-3">
                         <i class="fa-regular fa-face-smile" style="color: #606060;"></i>
-                        <input type="text" placeholder="Scrivi un messaggio">
+                        <input v-model="inputMessage" type="text" placeholder="Scrivi un messaggio" @keyup.enter="newMessage()">
                         <i class="fa-solid fa-microphone" style="color: #606060;"></i>
                     </div>
                 </div>
