prove funzionamento ricerca contatti(no)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </div>
                             <div>
                                 <h6>{{element.name}}</h6>
-                                <p>Ciao: {{lastMessage.message}}</p>
+                                <p>{{lastMessage().message}}</p>
                             </div>
                             <div>
                                 <!-- ORARIO -->
