prova divisione data

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             </div>
                             <div>
                                 <!-- ORARIO -->
+                                <!-- <p>{{divisionDate(index)}}</p> -->
                             </div>
                         </div>
                     </div>
